--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     },
     "dependencies": {
         "@formkit/auto-animate": "^0.8.0",
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "chart.js": "^4.4.0",
         "flowbite": "^1.8.1",
         "pinia": "^2.1.6",
-        "vue-chartjs": "^5.2.0"
+        "vue-chartjs": "^5.2.0",
+        "vue-toast-notification": "^3.1.1",
+        "vue-toastification": "^2.0.0-rc.5",
+        "vue3-select2-component": "^0.1.7"
     }
 }
