--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@formkit/auto-animate": "^0.8.0",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
+        "@vueuse/motion": "^2.0.0",
         "chart.js": "^4.4.0",
         "flowbite": "^1.8.1",
         "pinia": "^2.1.6",
