--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
-        "tightenco/ziggy": "^1.0"
+        "lcobucci/jwt": "^4.0",
+        "tightenco/ziggy": "^1.0",
+        "laravel/passport": "^10.0"
+
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -21,7 +24,9 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "lcobucci/jwt": "^4.3|^5.0",
+        "league/oauth2-server": "^8.2"
     },
     "autoload": {
         "psr-4": {
