--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
         "chart.js": "^4.4.0",
         "flowbite": "^1.8.1",
         "pinia": "^2.1.6",
+        "primeflex": "^3.3.1",
+        "primevue": "^3.40.1",
+        "v-lazy-image": "^2.1.1",
         "vue-chartjs": "^5.2.0",
+        "vue-multiselect": "^3.0.0-beta.3",
         "vue-toast-notification": "^3.1.1",
         "vue-toastification": "^2.0.0-rc.5",
         "vue3-select2-component": "^0.1.7"
