--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vue-multiselect": "^3.0.0-beta.3",
         "vue-toast-notification": "^3.1.1",
         "vue-toastification": "^2.0.0-rc.5",
+        "vue3-google-map": "^0.18.0",
         "vue3-select2-component": "^0.1.7"
     }
 }
