--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
         "laravel/framework": "^9.19",
+        "laravel/passport": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "lcobucci/jwt": "^4.0",
-        "tightenco/ziggy": "^1.0",
-        "laravel/passport": "^10.0"
-
+        "psr/simple-cache": "1.0",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
